Refactor and fix some bugs